Fix Java 11 compatibility issues
- Replace text blocks with StringBuilder (Java 15+ -> Java 11)
- Replace .toList() with .collect(Collectors.toList()) (Java 16+ -> Java 11)
- Replace records with inner classes (Java 14+ -> Java 11)
- All code now compatible with Java 11